attached_assets/Pasted-arning-implicit-conversion-changes-signedness-int-to-size-type-aka-unsigned-long-Wsign-c-1755678876166_1755678876166.txt
arning: implicit conversion changes signedness: 'int' to 'size_type' (aka 'unsigned long') [-Wsign-conversion]
  511 |             pitchHistory[i] = pitchHistory[i + 1];
      |             ~~~~~~~~~~~~ ^
/Users/marselmacevans/Downloads/atmrs/Source/PitchCorrectionEngine.cpp:511:46: warning: implicit conversion changes signedness: 'int' to 'size_type' (aka 'unsigned long') [-Wsign-conversion]
  511 |             pitchHistory[i] = pitchHistory[i + 1];
      |                               ~~~~~~~~~~~~ ~~^~~
/Users/marselmacevans/Downloads/atmrs/Source/PitchCorrectionEngine.cpp:521:30: warning: implicit conversion changes signedness: 'int' to 'size_type' (aka 'unsigned long') [-Wsign-conversion]
  521 |             if (pitchHistory[i] > 0.0f)
      |                 ~~~~~~~~~~~~ ^
/Users/marselmacevans/Downloads/atmrs/Source/PitchCorrectionEngine.cpp:524:47: warning: implicit conversion changes signedness: 'int' to 'size_type' (aka 'unsigned long') [-Wsign-conversion]
  524 |                 smoothedPitch += pitchHistory[i] * weight;
      |                                  ~~~~~~~~~~~~ ^
/Users/marselmacevans/Downloads/atmrs/Source/PitchCorrectionEngine.cpp:546:15: warning: declaration shadows a field of 'PitchCorrectionEngine' [-Wshadow]
  546 |         float window = 0.5f * (1.0f - std::cos(2.0f * juce::MathConstants<float>::pi * i / (numSamples - 1)));
      |               ^
/Users/marselmacevans/Downloads/atmrs/Source/PitchCorrectionEngine.h:61:58: note: previous declaration is here
   61 |     std::unique_ptr<juce::dsp::WindowingFunction<float>> window;
      |                                                          ^
/Users/marselmacevans/Downloads/atmrs/Source/PitchCorrectionEngine.cpp:560:15: warning: declaration shadows a field of 'PitchCorrectionEngine' [-Wshadow]
  560 |         float window = a0 - a1 * std::cos(phase) + a2 * std::cos(2.0f * phase);
      |               ^
/Users/marselmacevans/Downloads/atmrs/Source/PitchCorrectionEngine.h:61:58: note: previous declaration is here
   61 |     std::unique_ptr<juce::dsp::WindowingFunction<float>> window;
      |                                                          ^
In file included from /Users/marselmacevans/Downloads/atmrs/Source/PluginProcessor.cpp:1:
In file included from /Users/marselmacevans/Downloads/atmrs/Source/PluginProcessor.h:11:
In file included from /Users/marselmacevans/Downloads/atmrs/Source/AIModelLoader.h:11:
In file included from /Users/marselmacevans/Downloads/atmrs/build/_deps/onnxruntime-src/include/onnxruntime_cxx_api.h:2266:
/Users/marselmacevans/Downloads/atmrs/build/_deps/onnxruntime-src/include/onnxruntime_cxx_inline.h:1088:54: warning: declaration shadows a local variable [-Wshadow-uncaptured-local]
 1088 |   auto strings_deletor = [&deletor, num_keys](char** out) { for(int64_t i = 0; i < num_keys; ++i) deletor(out[i]); };
      |                                                      ^
/Users/marselmacevans/Downloads/atmrs/build/_deps/onnxruntime-src/include/onnxruntime_cxx_inline.h:1078:10: note: previous declaration is here
 1078 |   char** out = nullptr;
      |          ^
In file included from /Users/marselmacevans/Downloads/atmrs/Source/PluginEditor.cpp:1:
In file included from /Users/marselmacevans/Downloads/atmrs/Source/PluginEditor.h:6:
In file included from /Users/marselmacevans/Downloads/atmrs/Source/PluginProcessor.h:11:
In file included from /Users/marselmacevans/Downloads/atmrs/Source/AIModelLoader.h:11:
In file included from /Users/marselmacevans/Downloads/atmrs/build/_deps/onnxruntime-src/include/onnxruntime_cxx_api.h:2266:
/Users/marselmacevans/Downloads/atmrs/build/_deps/onnxruntime-src/include/onnxruntime_cxx_inline.h:1088:54: warning: declaration shadows a local variable [-Wshadow-uncaptured-local]
 1088 |   auto strings_deletor = [&deletor, num_keys](char** out) { for(int64_t i = 0; i < num_keys; ++i) deletor(out[i]); };
      |                                                      ^
/Users/marselmacevans/Downloads/atmrs/build/_deps/onnxruntime-src/include/onnxruntime_cxx_inline.h:1078:10: note: previous declaration is here
 1078 |   char** out = nullptr;
      |          ^
/Users/marselmacevans/Downloads/atmrs/build/_deps/onnxruntime-src/include/onnxruntime_cxx_inline.h:1853:35: warning: declaration shadows a local variable [-Wshadow-uncaptured-local]
 1853 |   auto release_fn = [&len](char** providers) {
      |                                   ^
/Users/marselmacevans/Downloads/atmrs/build/_deps/onnxruntime-src/include/onnxruntime_cxx_inline.h:1850:10: note: previous declaration is here
 1850 |   char** providers;
      |          ^
/Users/marselmacevans/Downloads/atmrs/build/_deps/onnxruntime-src/include/onnxruntime_cxx_inline.h:1853:35: warning: declaration shadows a local variable [-Wshadow-uncaptured-local]
 1853 |   auto release_fn = [&len](char** providers) {
      |                                   ^
/Users/marselmacevans/Downloads/atmrs/build/_deps/onnxruntime-src/include/onnxruntime_cxx_inline.h:1850:10: note: previous declaration is here
 1850 |   char** providers;
      |          ^
In file included from /Users/marselmacevans/Downloads/atmrs/Source/PluginProcessor.cpp:3:
/Users/marselmacevans/Downloads/atmrs/Source/Utils.h:31:60: error: unknown type name 'WindowType'
   31 |     static void applyWindow(float* buffer, int numSamples, WindowType windowType);
      |                                                            ^
/Users/marselmacevans/Downloads/atmrs/Source/PluginProcessor.cpp:14:72: warning: field 'pluginParameters' is uninitialized when used here [-Wuninitialized]
   14 |     parameters(*this, nullptr, juce::Identifier("AutoTuneParameters"), pluginParameters.createParameterLayout()),
      |                                                                        ^
/Users/marselmacevans/Downloads/atmrs/Source/PluginProcessor.cpp:47:44: error: redefinition of 'getName'
   47 | const juce::String AutoTuneAudioProcessor::getName() const
      |                                            ^
/Users/marselmacevans/Downloads/atmrs/Source/PluginProcessor.h:37:24: note: previous definition is here
   37 |     const juce::String getName() const override { return JucePlugin_Name; }
      |                        ^
/Users/marselmacevans/Downloads/atmrs/Source/PluginProcessor.cpp:54:29: error: redefinition of 'getCurrentProgram'
   54 | int AutoTuneAudioProcessor::getCurrentProgram()
      |                             ^
/Users/marselmacevans/Downloads/atmrs/Source/PluginProcessor.h:45:9: note: previous definition is here
   45 |     int getCurrentProgram() override { return 0; }
      |         ^
/Users/marselmacevans/Downloads/atmrs/Source/PluginProcessor.cpp:59:30: error: redefinition of 'setCurrentProgram'
   59 | void AutoTuneAudioProcessor::setCurrentProgram(int index)
      |                              ^
/Users/marselmacevans/Downloads/atmrs/Source/PluginProcessor.h:46:10: note: previous definition is here
   46 |     void setCurrentProgram(int index) override { juce::ignoreUnused(index); }
      |          ^
/Users/marselmacevans/Downloads/atmrs/Source/PluginProcessor.cpp:203:36: warning: implicit conversion changes signedness: 'const int' to 'size_type' (aka 'unsigned long') [-Wsign-conversion]
  203 |         std::vector<float> pitches(numSamples);
      |                            ~~~~~~~ ^~~~~~~~~~
/Users/marselmacevans/Downloads/atmrs/Source/PluginProcessor.cpp:209:42: warning: implicit conversion changes signedness: 'int' to 'size_type' (aka 'unsigned long') [-Wsign-conversion]
  209 |             float currentPitch = pitches[sample];
      |                                  ~~~~~~~ ^~~~~~
/Users/marselmacevans/Downloads/atmrs/Source/PluginProcessor.cpp:254:36: warning: implicit conversion changes signedness: 'const int' to 'size_type' (aka 'unsigned long') [-Wsign-conversion]
  254 |         std::vector<float> pitches(numSamples);
